--- a/src/blocks/accordeon/accordeon.pug
+++ b/src/blocks/accordeon/accordeon.pug
@@ -21,7 +21,8 @@ mixin accordeon(text, mods)
   section.accordeon.section--angled
     .accordeon__inner.container
       .accordeon__element 
-        .accordeon__btn(style="background-image: url(img/collect-data.png);")
+        .accordeon__btn
+          img(src="img/collect-data.jpg", alt="").accordeon__btn-img
           h3.accordeon__title Сбор данных по потреблению энергоресурсов
           button(type='button').accordeon__check.btn-reset
         .accordeon__content
@@ -80,11 +81,35 @@ mixin accordeon(text, mods)
                   img(src="img/screen2.png", alt="Статистика")
                 li.best__screen-item 
                   img(src="img/screen3.png", alt="Статистика")
-            +task()
+          .task
+            h2.task__title.h2-inner Решаемые задачи
+            ul.task__list
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных;
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных.
+
             .collapse 
-              button(type="button").collapse__btn.text-bold.btn-reset Свернуть
+              button(type="button").collapse__btn.text-bold.btn-reset 
+                svg(width='24' height='29' viewBox='0 0 24 29' fill='none' xmlns='http://www.w3.org/2000/svg')
+                  path(d='M2.71721 14.4104C2.13159 14.9964 1.18184 14.9967 0.59589 14.411C0.00993776 13.8254 0.00966918 12.8757 0.59529 12.2897L2.71721 14.4104ZM12.0005 3L10.9395 1.93964L12.0005 0.87808L13.0614 1.93964L12.0005 3ZM23.4057 12.2897C23.9913 12.8757 23.991 13.8254 23.4051 14.411C22.8191 14.9967 21.8694 14.9964 21.2837 14.4104L23.4057 12.2897ZM0.59529 12.2897L10.9395 1.93964L13.0614 4.06036L2.71721 14.4104L0.59529 12.2897ZM13.0614 1.93964L23.4057 12.2897L21.2837 14.4104L10.9395 4.06036L13.0614 1.93964Z' fill='white')
+                  path(d='M10.5 3.25195C10.5 2.42353 11.1716 1.75195 12 1.75195C12.8284 1.75195 13.5 2.42353 13.5 3.25195H10.5ZM13.5 27.0004C13.5 27.8288 12.8284 28.5004 12 28.5004C11.1716 28.5004 10.5 27.8288 10.5 27.0004H13.5ZM13.5 3.25195L13.5 27.0004H10.5L10.5 3.25195H13.5Z' fill='white')
+                span Свернуть
       .accordeon__element 
-        .accordeon__btn(style="background-image: url(img/comm.jpg);")
+        .accordeon__btn
+          img(src="img/comm.jpg", alt="").accordeon__btn-img
           h3.accordeon__title Коммерческий учёт
           button(type='button').accordeon__check.btn-reset
         .accordeon__content
@@ -143,11 +168,35 @@ mixin accordeon(text, mods)
                   img(src="img/screen2.png", alt="Статистика")
                 li.best__screen-item 
                   img(src="img/screen3.png", alt="Статистика")
-            +task()
+          .task
+            h2.task__title.h2-inner Решаемые задачи
+            ul.task__list
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных;
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных.
+
             .collapse 
-              button(type="button").collapse__btn.text-bold.btn-reset Свернуть
+              button(type="button").collapse__btn.text-bold.btn-reset 
+                svg(width='24' height='29' viewBox='0 0 24 29' fill='none' xmlns='http://www.w3.org/2000/svg')
+                  path(d='M2.71721 14.4104C2.13159 14.9964 1.18184 14.9967 0.59589 14.411C0.00993776 13.8254 0.00966918 12.8757 0.59529 12.2897L2.71721 14.4104ZM12.0005 3L10.9395 1.93964L12.0005 0.87808L13.0614 1.93964L12.0005 3ZM23.4057 12.2897C23.9913 12.8757 23.991 13.8254 23.4051 14.411C22.8191 14.9967 21.8694 14.9964 21.2837 14.4104L23.4057 12.2897ZM0.59529 12.2897L10.9395 1.93964L13.0614 4.06036L2.71721 14.4104L0.59529 12.2897ZM13.0614 1.93964L23.4057 12.2897L21.2837 14.4104L10.9395 4.06036L13.0614 1.93964Z' fill='white')
+                  path(d='M10.5 3.25195C10.5 2.42353 11.1716 1.75195 12 1.75195C12.8284 1.75195 13.5 2.42353 13.5 3.25195H10.5ZM13.5 27.0004C13.5 27.8288 12.8284 28.5004 12 28.5004C11.1716 28.5004 10.5 27.8288 10.5 27.0004H13.5ZM13.5 3.25195L13.5 27.0004H10.5L10.5 3.25195H13.5Z' fill='white')
+                span Свернуть
       .accordeon__element 
-        .accordeon__btn(style="background-image: url(img/disp.jpg);")
+        .accordeon__btn
+          img(src="img/disp.jpg", alt="").accordeon__btn-img
           h3.accordeon__title Диспетчеризация и технический учёт
           button(type='button').accordeon__check.btn-reset
         .accordeon__content
@@ -206,9 +255,32 @@ mixin accordeon(text, mods)
                   img(src="img/screen2.png", alt="Статистика")
                 li.best__screen-item 
                   img(src="img/screen3.png", alt="Статистика")
-            +task()
+          .task
+            h2.task__title.h2-inner Решаемые задачи
+            ul.task__list
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных;
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных.
+
             .collapse 
-              button(type="button").collapse__btn.text-bold.btn-reset Свернуть
+              button(type="button").collapse__btn.text-bold.btn-reset 
+                svg(width='24' height='29' viewBox='0 0 24 29' fill='none' xmlns='http://www.w3.org/2000/svg')
+                  path(d='M2.71721 14.4104C2.13159 14.9964 1.18184 14.9967 0.59589 14.411C0.00993776 13.8254 0.00966918 12.8757 0.59529 12.2897L2.71721 14.4104ZM12.0005 3L10.9395 1.93964L12.0005 0.87808L13.0614 1.93964L12.0005 3ZM23.4057 12.2897C23.9913 12.8757 23.991 13.8254 23.4051 14.411C22.8191 14.9967 21.8694 14.9964 21.2837 14.4104L23.4057 12.2897ZM0.59529 12.2897L10.9395 1.93964L13.0614 4.06036L2.71721 14.4104L0.59529 12.2897ZM13.0614 1.93964L23.4057 12.2897L21.2837 14.4104L10.9395 4.06036L13.0614 1.93964Z' fill='white')
+                  path(d='M10.5 3.25195C10.5 2.42353 11.1716 1.75195 12 1.75195C12.8284 1.75195 13.5 2.42353 13.5 3.25195H10.5ZM13.5 27.0004C13.5 27.8288 12.8284 28.5004 12 28.5004C11.1716 28.5004 10.5 27.8288 10.5 27.0004H13.5ZM13.5 3.25195L13.5 27.0004H10.5L10.5 3.25195H13.5Z' fill='white')
+                span Свернуть
       .accordeon__element 
         .accordeon__btn(style="background-image: url(img/control.jpg);")
           h3.accordeon__title Управление жизненным циклом средств измерения и приборов учёта
@@ -269,6 +341,29 @@ mixin accordeon(text, mods)
                   img(src="img/screen2.png", alt="Статистика")
                 li.best__screen-item 
                   img(src="img/screen3.png", alt="Статистика")
-            +task()
+          .task
+            h2.task__title.h2-inner Решаемые задачи
+            ul.task__list
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных;
+              li.task__item
+                p.text Управление допусками, государственной сертификацией и аттестацией персонала опасных производств;
+              li.task__item
+                p.text Оперативные обходы с использованием мобильных устройств и систем дополненной реальности;
+              li.task__item
+                p.text Автоматизация процессов взаимодействия G2B и G2G при осуществлении государственного контроля товаров и морского и речного транспорта при международной перевозке;
+              li.task__item
+                p.text Создание алгоритмов оптимизации управления основными фондами нефтяных месторождений с использованием гибридных моделей на базе гидродинамики и исторических данных.
+
             .collapse 
-              button(type="button").collapse__btn.text-bold.btn-reset Свернуть
+              button(type="button").collapse__btn.text-bold.btn-reset 
+                svg(width='24' height='29' viewBox='0 0 24 29' fill='none' xmlns='http://www.w3.org/2000/svg')
+                  path(d='M2.71721 14.4104C2.13159 14.9964 1.18184 14.9967 0.59589 14.411C0.00993776 13.8254 0.00966918 12.8757 0.59529 12.2897L2.71721 14.4104ZM12.0005 3L10.9395 1.93964L12.0005 0.87808L13.0614 1.93964L12.0005 3ZM23.4057 12.2897C23.9913 12.8757 23.991 13.8254 23.4051 14.411C22.8191 14.9967 21.8694 14.9964 21.2837 14.4104L23.4057 12.2897ZM0.59529 12.2897L10.9395 1.93964L13.0614 4.06036L2.71721 14.4104L0.59529 12.2897ZM13.0614 1.93964L23.4057 12.2897L21.2837 14.4104L10.9395 4.06036L13.0614 1.93964Z' fill='white')
+                  path(d='M10.5 3.25195C10.5 2.42353 11.1716 1.75195 12 1.75195C12.8284 1.75195 13.5 2.42353 13.5 3.25195H10.5ZM13.5 27.0004C13.5 27.8288 12.8284 28.5004 12 28.5004C11.1716 28.5004 10.5 27.8288 10.5 27.0004H13.5ZM13.5 3.25195L13.5 27.0004H10.5L10.5 3.25195H13.5Z' fill='white')
+                span Свернуть
