--- a/src/blocks/top-slider/top-slider.pug
+++ b/src/blocks/top-slider/top-slider.pug
@@ -28,17 +28,17 @@ mixin top-slider(text, mods)
                 .top-slider__descr
                   p Разработка комплексных программных продуктов на&nbsp;заказ, реализация решений в&nbsp;области цифровизации производства и&nbsp;снижения импортозависимости.
       .swiper-slide.top-slider__slide 
-        .top-slider__img(style="background-image: url(img/slider2.jpg);")
+        .top-slider__img(style="background-image: url(img/bgrd_solutions-mon.jpg);")
           .top-slider__inner.container
             .top-slider__body
-                h2.top-slider__title Advanced Digital Solutions
+                h2.top-slider__title Комплексные программные продукты
                 .top-slider__descr
-                  p Разработка комплексных программных продуктов на&nbsp;заказ, реализация решений в&nbsp;области цифровизации производства и&nbsp;снижения импортозависимости.
+                  p Мы предлагаем набор планов и возможностей, инноваций,  которые помогают компаниям которые помогают компаниям и промышленным предприятиям перейти на новые уровни автоматизации и цифровизации.
       .swiper-slide.top-slider__slide 
-        .top-slider__img(style="background-image: url(img/slider1.jpg);")
+        .top-slider__img(style="background-image: url(img/bgrd_ind-cif.jpg);")
           .top-slider__inner.container
             .top-slider__body
-                h2.top-slider__title Advanced Digital Solutions
+                h2.top-slider__title Технологические решения для предприятий
                 .top-slider__descr
                   p Разработка комплексных программных продуктов на&nbsp;заказ, реализация решений в&nbsp;области цифровизации производства и&nbsp;снижения импортозависимости.
     .top-slider__wrapper.container
