--- a/src/pages/monitoring.pug
+++ b/src/pages/monitoring.pug
@@ -11,7 +11,7 @@ block meta
 
 block content
   +inner-wrapper()
-    +inner-wrapper-top(style="background-image: url(img/slider2.jpg);")
+    +inner-wrapper-top(style="background-image: url(img/bgrd_solutions-mon.jpg);")
       +breadcrumbs()
         +breadcrumbs-item('Главная', '/')
         +breadcrumbs-item('Решения', '/')
