--- a/src/pages/project-descr.pug
+++ b/src/pages/project-descr.pug
@@ -29,16 +29,35 @@ block content
       p.text-block__text.text Для реализации проекта была приглашена компания ИНЛАЙН ГРУП, специалисты которой предложили собственные инновационные методические подходы и&nbsp;технические решения, с&nbsp;помощью которых удалось реализовать управление сетью терминальных устройств значительно проще и&nbsp;с&nbsp;меньшими затратами, чем это могло быть при выборе другого решения.
       p.text-block__text.text Принципиальной особенностью предложенного решения было использование методологии управления ИТ-активами (ITAM) для управления жизненным циклом терминальных устройств.
       p.text-block__text.text Первым шагом в&nbsp;этом направлении стало формирование единых требований банка для оптимизации процесса управления сетью терминального оборудования. Проектной командой ИНЛАЙН ГРУП совместно с&nbsp;командой заказчика были разработаны: описание процесса управления сетью терминальных устройств, техническое задание на&nbsp;настройку системы, требования к&nbsp;интеграциям, а&nbsp;также алгоритмы выполнения стандартных запросов на&nbsp;обслуживание.
-  section.text-block
+      p.text-block__text.text-bold Автоматизация процесса управления сетью терминальных устройств самообслуживания и POS-терминалов позволила:
+      ul.task__list.task__list--inner
+        li.task__item
+          p.text Постановка на учет; 
+        li.task__item
+          p.text Перемещения; 
+        li.task__item 
+          p.text Обновления и ремонты;
+        li.task__item
+          p.text Изменения атрибутов; 
+        li.task__item
+          p.text Постановка и снятие с сервисного обслуживания; изменение сервисной компании.
+        li.task__item
+          p.text Сократить время на интеграцию данных о новых устройствах.
+      p.text-block__text.text Еще одной особенностью реализованного проекта стало внедрение единого централизованного решения на&nbsp;базе уже существующей в&nbsp;банке ITSM-системы НРE Service Manager&nbsp;9.30. HPE Service Manager&nbsp;&mdash; широко распространенный и&nbsp;хорошо зарекомендовавший себя на&nbsp;российском рынке продукт для автоматизации ITSM-процессов. Он&nbsp;обладает большой гибкостью настройки бизнес-логики и&nbsp;кастомизации, что позволяет быть уверенным в&nbsp;возможности построения самых разнообразных процессов с&nbsp;учетом требований заказчиков.
+      p.text-block__text.text Разработанные специалистами&nbsp;ИГ на&nbsp;базе HP&nbsp;SM&nbsp;решения позволили расширить функционал ITSM-продукта и&nbsp;реализовать универсальное управление активами, в&nbsp;том числе не&nbsp;относящимися к&nbsp;ИТ. Для конечных пользователей, не&nbsp;связанных с&nbsp;эксплуатацией IMAC-процессов, взаимодействие с&nbsp;системой реализовано в&nbsp;максимально привычной форме через портал самообслуживания. Использование в&nbsp;полной мере функционала multi-tennancy позволило достичь удовлетворяющей заказчика изолированности рабочих сред для различных подразделений.
+      p.text-block__text.text Помимо этого, внедренная система позволила учитывать выполнение работ на&nbsp;стороне внешних контрагентов, что дало возможность банку обеспечить взаимодействие и&nbsp;контроль над бизнес-процессами в&nbsp;режиме реального времени.
+      p.text-block__text.text В&nbsp;рамках проекта система НРE Service Manager была интегрирована с&nbsp;информационно-банковской системой, MS&nbsp;Active Directory и&nbsp;программным комплексом по&nbsp;управлению информационно-платежными терминалами и&nbsp;устройствами АТМ (Automatic Teller Machine). Кроме этого, была выполнена загрузка данных из&nbsp;систем по&nbsp;управлению POS-терминалами (Unipos, TMS).
+      
+  section.text-block.mb-section-80
     .text-block__inner.container
       h2.text-block__h2.h2-inner Результат
       p.text-block__text.text-bold Автоматизация процесса управления сетью терминальных устройств самообслуживания и POS-терминалов позволила:
-      ul.task__list
+      ul.task__list.task__list--inner
         li.task__item
           p.text Обеспечить руководство банка возможностью получать объективную статистическую информацию о работе и обслуживании устройств, работе поддерживающих подразделений, а также принимать эффективные управленческие решения на основе этих данных;
         li.task__item
           p.text Повысить темпы внедрения новых банковских продуктов за счет владения достоверной информацией о работе терминальных устройств и процедурах обслуживания;
-        li.task__item
+        li.task__item 
           p.text Организовать работу в системе с внешними контрагентами в рамках единого процесса;
         li.task__item
           p.text Улучшить контроль исполнения поставщиками и сервисными организациями своих обязательств;
@@ -51,7 +70,7 @@ block content
       p.text-block__text.text Большой опыт компании-исполнителя в&nbsp;применении методологий ITSM и&nbsp;ITAM для организации процессов управления информационными технологиями позволил решить широкий спектр бизнес-задач без серьезного увеличения бюджета заказчика. Это дало возможность не&nbsp;закупать еще одно специализированное и&nbsp;дорогостоящее решение, а&nbsp;быстро применить существующий функционал для реализации принципиально новых задач.
       p.text-block__text.text Результаты внедрения убедительно демонстрируют уникальные преимущества использования методик ITSM для управления активами в&nbsp;сферах деятельности, традиционно контролируемыми сложными и&nbsp;дорогими системами класса ERP.
       
-      ul.download.mb-64
+      ul.download.mt-64
         li.download__item 
           .download__body
             .download__pic 
