--- a/src/blocks/accordeon/accordeon.scss
+++ b/src/blocks/accordeon/accordeon.scss
@@ -26,6 +26,9 @@
       .accordeon__btn:after {
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
       }
+      .accordeon__btn-img{
+        filter: grayscale(0%);
+      }
 
       .accordeon__content {
         max-height: 5000px;
@@ -58,7 +61,7 @@
 
     @media (min-width: $screen-lg) {
       padding: 0 80px;
-      height: 256px;
+      min-height: 160px;
       margin-bottom: 40px;
     }
 
@@ -71,13 +74,14 @@
       width: 100%;
       height: 100%;
       cursor: pointer;
+      opacity: 1;
       background: linear-gradient(0deg, rgba(1, 73, 60, 0.6), rgba(1, 73, 60, 0.6)), linear-gradient(180deg, rgba(0, 221, 164, 0.5) 0%, rgba(0, 212, 192, 0.5) 100%);
-      transition: all $transition-time;
+      transition: all .5s;
     }
 
     &:hover {
       &:after {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
+        opacity: 0;
       }
 
       .accordeon__check::after,
@@ -86,6 +90,48 @@
       }
     }
 
+    &::before {
+      position: absolute;
+      content: '';
+      opacity: 0;
+      top: 0;
+      left: 0;
+      border-radius: 16px;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      z-index: 2;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
+      transition: all .5s;
+    }
+
+    &:hover {
+      &:before {
+        opacity: 1;
+
+      }
+
+      .accordeon__btn-img{
+        filter: grayscale(0%);
+      }
+
+      .accordeon__check::after,
+      .accordeon__check::before {
+        background-color: $main-light;
+      }
+    }
+
+  }
+
+  &__btn-img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 16px;
+    filter: grayscale(99%);
+    transition: all $transition-time;
   }
 
   &__content {
@@ -184,7 +230,22 @@
 
 }
 
+.accordeon.accordeon--industries {
+
+}
+
 .accordeon--industries {
+
+  margin-bottom: 0;  padding: 30px 0;
+
+  @media (min-width: $screen-xxl) {
+    margin-bottom: 0px;
+  }
+
+  @media (min-width: $screen-lg) {
+    padding: 50px 0;
+  }
+
   .accordeon__btn {
     &::after {
       background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85));
@@ -199,19 +260,26 @@
 
   .accordeon__element {
     &.open {
-      .accordeon__btn:after {
-        background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85));
-      }
+      // .accordeon__btn:after {
+      //   background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85));
+      // }
     }
   }
 
-  .task__item::before{
+  .task__item::before {
     background-color: $color-accent;
   }
-  .collapse__btn{
+
+  .collapse__btn {
     color: $black;
+    transition: all $transition-time;
+
+    // &:hover {
+    //   color: $main-light;
+    // }
   }
-  .collapse__btn::before{
+
+  .collapse__btn::before {
     background: url(../img/arrow-down-black.svg);
     width: 23px;
     height: 24px;
