--- a/src/blocks/best/best.scss
+++ b/src/blocks/best/best.scss
@@ -116,7 +116,7 @@
     list-style: none;
     margin-bottom: 40px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: flex;
       flex-wrap: wrap;
       margin: 0 -20px 40px;
@@ -126,7 +126,7 @@
   &__screen-item {
     margin-bottom: 24px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       padding: 20px;
       flex: 0 0 33.333%;
       display: flex;
