--- a/src/blocks/branch/branch.pug
+++ b/src/blocks/branch/branch.pug
@@ -22,9 +22,11 @@ mixin branch(text, mods)
     .branch__inner.container
       h2.branch__title.h2 Отрасли 
       .branch__block 
-        .branch__top(style="background-image: url(img/branch1.jpg);") 
+        .branch__top
+
           a(href="javascript:void(0);").branch__link
             .branch__item-body
+              img(src="img/branch1.jpg", alt="").branch__item-img
               h3.branch__item-title Цифровизация производства
               ul.branch__item-bottom 
                 li.branch__item-item
@@ -36,9 +38,10 @@ mixin branch(text, mods)
                 li.branch__item-item
                   span.branch__item-subtitle.h5 Распределённая командная работа и цифровой рабочий
         ul.branch__grid 
-          .branch__item(style="background-image: url(img/branch2.jpg);")  
+          .branch__item  
             a(href="javascript:void(0);").branch__link
-              .branch__body 
+              .branch__body
+                img(src="img/branch2.jpg", alt="").branch__item-img 
                 h3.branch__title-h3 Нефть и газ
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Цифровые двойники
@@ -46,21 +49,22 @@ mixin branch(text, mods)
                   li.branch__subtitle.h5 Интегрированное планирование и оптимизация
                   li.branch__subtitle.h5 Переработка и сбыт
                   li.branch__subtitle.h5 Корпоративные сервисы
-          .branch__item(style="background-image: url(img/branch3.jpg);")  
+          .branch__item  
             a(href="javascript:void(0);").branch__link
-              .branch__body 
+              .branch__body
+                img(src="img/branch3.jpg", alt="").branch__item-img 
                 h3.branch__title-h3 Энергетика
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Генерация
                   li.branch__subtitle.h5 Ресурсоснабжающие организации и сбыт
                   li.branch__subtitle.h5 Корпоративные сервисы
-          .branch__item(style="background-image: url(img/branch4.png);")  
+          .branch__item  
             a(href="javascript:void(0);").branch__link
-              .branch__body 
+              .branch__body
+                img(src="img/branch4.jpg", alt="").branch__item-img 
                 h3.branch__title-h3 Промышленное производство
                 ul.branch__bottom 
                   li.branch__subtitle.h5 Цифровые двойники
-                  li.branch__subtitle.h5 Достоверность данных
-                  li.branch__subtitle.h5 Проактивные приложения
-                  li.branch__subtitle.h5 Распределённая командная работа и цифровой рабочий
+                  li.branch__subtitle.h5 Ресурсоснабжающие организации и сбыт
+                  li.branch__subtitle.h5 Корпоративные сервисы
 
