--- a/src/blocks/branch/branch.scss
+++ b/src/blocks/branch/branch.scss
@@ -9,15 +9,27 @@
   margin-bottom: 48px;
 
   @media (min-width: $screen-xxl) {
-    padding: 148px 0;
+    padding: 160px 0;
+    margin-bottom: 104px;
+  }
+
+  @media (min-width: $screen-c) {
+    padding: 136px 0;
+    margin-bottom: 118px;
   }
 
   @media (min-width: $screen-xl) {
-    padding: 108px 0;
+    padding: 118px 0 136px;
+    margin-bottom: 132px;
   }
 
   @media (min-width: $screen-lg) {
-    padding: 100px 0;
+    padding: 102px 0 112px;
+    margin-bottom: 40px;
+  }
+  @media (min-width: $screen-md) {
+    padding: 102px 0;
+    margin-bottom: 100px;
   }
 
   @media (min-width: $screen-sm) {
@@ -28,7 +40,10 @@
     color: $white;
     margin: 0 0 30px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-xxl) {
+      margin: 0 0 56px;
+    }
+    @media (min-width: $screen-md) {
       margin: 0 0 48px;
     }
 
@@ -61,7 +76,7 @@
       bottom: 0;
       right: 0;
       left: 0;
-      z-index: -1;
+      z-index: 2;
       border-radius: 16px;
       pointer-events: none;
       transition: all $transition-time;
@@ -76,7 +91,6 @@
       bottom: 0;
       right: 0;
       left: 0;
-      z-index: -1;
       border-radius: 16px;
       pointer-events: none;
       background: linear-gradient(0deg, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45));
@@ -91,6 +105,10 @@
 
       &:after {
         opacity: 1;
+      }
+
+      .branch__item-img{
+        filter: grayscale(0%);
       }
     }
   }
@@ -113,7 +131,7 @@
       padding: 48px;
     }
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       padding: 32px;
       align-items: center;
     }
@@ -123,14 +141,15 @@
     font: 18px $ff-i-b;
     font-weight: 700;
     margin: 0;
+    z-index: 3;
 
     @media (min-width: $screen-xxl) {
       font-size: 36px;
       margin: 0 0 40px;
     }
 
-    @media (min-width: $screen-lg) {
-      font-size: 30px;
+    @media (min-width: $screen-md) {
+      font-size: 26px;
       text-align: center;
       margin: 0 0 32px;
     }
@@ -156,7 +175,7 @@
       right: 50%;
       transform: translateY(-50%);
 
-      @media (min-width: $screen-lg) {
+      @media (min-width: $screen-md) {
         top: 50%;
         right: -32px;
       }
@@ -170,24 +189,32 @@
         width: 28%;
       }
 
-      @media (min-width: $screen-lg) {
-        margin-bottom: 16px;
+      @media (min-width: $screen-md) {
+        margin-bottom: 12px;
       }
     }
   }
 
   &__item-subtitle {
     text-align: center;
+
+    @media (min-width: $screen-xxl) {
+      font-size: 20px;
+    }
+
+    @media (min-width: $screen-c) {
+      font-size: 17px;
+    }
   }
 
   &__item-bottom {
     margin: 0;
     padding: 0;
-
+z-index: 3;
     list-style: none;
     display: none;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -202,13 +229,10 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
-    @media (min-width: $screen-xxl) {
-      gap: 40px;
-    }
 
     @media (min-width: $screen-xl) {
       grid-template-columns: repeat(3, 1fr);
-      gap: 16px;
+      gap: 40px;
     }
   }
 
@@ -225,9 +249,8 @@
     z-index: 1;
 
     @media (min-width: $screen-xxl) {
-      aspect-ratio: 1/1;
+      min-height: auto;
     }
-
 
     &::after {
 
@@ -251,7 +274,7 @@
           bottom: 0;
           right: 0;
           left: 0;
-          z-index: -1;
+          z-index: 2;
           border-radius: 16px;
           pointer-events: none;
           background: linear-gradient(0deg, rgba(0, 16, 91, 0.55), rgba(0, 16, 91, 0.55));
@@ -267,6 +290,9 @@
           &:after {
             opacity: 1;
           }
+          .branch__item-img{
+            filter: grayscale(0%);
+          }
         }
       }
 
@@ -281,7 +307,7 @@
           bottom: 0;
           right: 0;
           left: 0;
-          z-index: -1;
+          z-index: 2;
           border-radius: 16px;
           pointer-events: none;
           background: linear-gradient(0deg, rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5));
@@ -297,6 +323,10 @@
           &:after {
             opacity: 1;
           }
+
+          .branch__item-img{
+            filter: grayscale(0%);
+          }
         }
       }
     }
@@ -310,7 +340,7 @@
           bottom: 0;
           right: 0;
           left: 0;
-          z-index: -1;
+          z-index: 2;
           border-radius: 16px;
           pointer-events: none;
           background: linear-gradient(0deg, rgba(0, 71, 99, 0.66), rgba(0, 71, 99, 0.66));
@@ -326,9 +356,26 @@
           &:after {
             opacity: 1;
           }
+
+          .branch__item-img{
+            filter: grayscale(0%);
+          }
         }
       }
     }
+  }
+
+  
+  &__item-img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 16px;
+    filter: grayscale(99%);
+    object-fit: cover;
+    transition: all $transition-time;
   }
 
   &__body {
@@ -343,7 +390,7 @@
       padding: 48px;
     }
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       padding: 32px;
     }
 
@@ -354,7 +401,7 @@
       bottom: 0;
       right: 0;
       left: 0;
-      z-index: -1;
+      z-index: 2;
       border-radius: 16px;
       pointer-events: none;
       background: linear-gradient(0deg, rgba(1, 73, 60, 0.6), rgba(1, 73, 60, 0.6)),
@@ -367,10 +414,16 @@
     font: 18px $ff-i-b;
     font-weight: 700;
     margin: 0;
+    z-index: 3;
 
     @media (min-width: $screen-xxl) {
       font-size: 36px;
       min-height: 86px;
+      margin: 0 0 40px;
+    }
+
+    @media (min-width: $screen-c) {
+      margin: 0 0 32px;
     }
 
     @media (min-width: $screen-xl) {
@@ -378,7 +431,7 @@
       margin: 0 0 40px;
     }
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       font-size: 28px;
       margin: 0 0 32px;
     }
@@ -387,19 +440,35 @@
   &__bottom {
     list-style: disc;
     display: none;
+    z-index: 3;
 
     @media (min-width: $screen-xxl) {
       padding-left: 20px;
     }
-    @media (min-width: $screen-lg) {
+
+    @media (min-width: $screen-md) {
       display: block;
     }
   }
 
   &__subtitle {
 
+    @media (min-width: $screen-xxl){
+      font-size: 20px;
+    }
+    @media (min-width: $screen-c){
+      font-size: 17px;
+    }
+
     &:not(:last-child) {
       margin-bottom: 8px;
     }
   }
+}
+
+.without-top {
+  .branch__item::after{
+    visibility: hidden;
+  }
+
 }
