--- a/src/blocks/callback-popup/callback-popup.scss
+++ b/src/blocks/callback-popup/callback-popup.scss
@@ -24,10 +24,11 @@
   &__text {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
 
     p {
       text-align: center;
+      margin-bottom: 0;
     }
   }
 
