--- a/src/blocks/download/download.scss
+++ b/src/blocks/download/download.scss
@@ -20,6 +20,9 @@
       margin-right: 40px;
       margin-bottom: 0;
     }
+    @media (min-width: $screen-lg) {
+      max-width: 440px;
+    }
   }
 
   &__body {
