--- a/src/blocks/news-det/news-det.scss
+++ b/src/blocks/news-det/news-det.scss
@@ -65,11 +65,14 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 40px 0;
+    padding: 20px 0;
     margin: 0;
 
     @media (min-width: $screen-lg) {
       padding: 64px 0;
+    }
+    @media (min-width: $screen-md) {
+      padding: 40px 0;
     }
   }
 
