--- a/src/blocks/page-header/page-header.pug
+++ b/src/blocks/page-header/page-header.pug
@@ -84,9 +84,13 @@ mixin page-header(mods)
               svg.page-header__search-btn(width='23' height='22' viewBox='0 0 23 22' fill='none' xmlns='http://www.w3.org/2000/svg')
                 path(d='M9.11 17.22C13.589 17.22 17.22 13.589 17.22 9.11C17.22 4.63097 13.589 1 9.11 1C4.63097 1 1 4.63097 1 9.11C1 13.589 4.63097 17.22 9.11 17.22Z' stroke='#00E68A' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round' fill='none')
                 path(d='M15.52 14.28L21.6 20.36' stroke='#00E68A' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round' fill='none')
-            .search-block 
+            .search-block.fix-block
               .search-block__inner.container
                 .search-block__content
+                  button.search-block__close.search-block-close.btn-reset    
+                    svg(width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg')
+                      path(d='M15.625 4.375L4.375 15.625' stroke='#014945' stroke-width='2' stroke-linecap='round' stroke-linejoin='round')
+                      path(d='M15.625 15.625L4.375 4.375' stroke='#014945' stroke-width='2' stroke-linecap='round' stroke-linejoin='round')
                   label.search-block__label Введите запрос
                   input.search-block__input(type="search" name="" placeholder="Поиск по сайту")
                   svg.search-block__btn(width='20' height='18' viewBox='0 0 20 18' fill='none' xmlns='http://www.w3.org/2000/svg')
@@ -95,7 +99,7 @@ mixin page-header(mods)
           .page-header__lang 
             a(href="javascript:void(0)").page-header__lang-btn ENG
             
-      #callback-popup(style="display:none;max-width:440spx;").popup.callback-popup
+      #callback-popup(style="display:none;max-width:440px;").popup.callback-popup
         .callback-popup__title.h4 Обратный звонок
         .callback-popup__text
           p.text Оставьте свои контакты, и мы перезвоним Вам в ближайшее время.
