--- a/src/blocks/project-tasks/project-tasks.scss
+++ b/src/blocks/project-tasks/project-tasks.scss
@@ -8,9 +8,10 @@
 
   margin: 48px 0;
 
-  @media (min-width: $screen-lg){
+  @media (min-width: $screen-lg) {
     margin: 80px 0 64px;
   }
+
   &__list {
 
     padding: 0;
@@ -38,14 +39,10 @@
     }
 
     &:hover {
-      .project-tasks__body {
-        background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85)), url("../img/fill-img.jpg");
-        background-repeat: no-repeat;
-        background-color: $main-dark;
-        background-position: right center;
-        background-size: cover;
+      .project-tasks__body::after {
+        opacity: 1;
       }
-    
+
 
       .project-tasks__title {
         color: $white;
@@ -54,6 +51,7 @@
   }
 
   &__body {
+    position: relative;
     text-decoration: none;
     box-shadow: 0px 8px 32px rgba(0, 0, 0, 0.05);
     border-radius: 16px;
@@ -69,9 +67,28 @@
     background-size: cover;
     transition: all $transition-time;
 
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      border-radius: 16px;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      opacity: 0;
+      background: linear-gradient(0deg, rgba(64, 119, 115, 0.85), rgba(64, 119, 115, 0.85)), url("../img/fill-img.jpg");
+      background-repeat: no-repeat;
+      background-color: $main-dark;
+      background-position: right center;
+      background-size: cover;
+      transition: all .5s;
+    }
+
     @media (min-width: $screen-xxl) {
       padding: 48px;
     }
+
     @media (min-width: $screen-lg) {
       padding: 36px;
       flex: 0 0 25%;
@@ -83,7 +100,9 @@
   &__title {
     color: $black;
     font: 14px/1.5 $ff-i-sb;
+    z-index: 2;
     transition: color $transition-time;
+
 
     @media (min-width: $screen-xl) {
       font-size: 18px;
