--- a/src/blocks/solutions/solutions.pug
+++ b/src/blocks/solutions/solutions.pug
@@ -22,10 +22,10 @@ mixin solutions(text, mods)
     .solutions__inner.container
       .solutions__content
         .solutions__top 
-          .solutions__top-title.h3 Advanced Digital Solutions
+          .solutions__top-title Advanced Digital Solutions
           .solutions__top-descr 
             p.solutions__top-text.text Команда профессионалов высокой квалификации проводит обследование, консалтинг, выбор оптимальных параметров проектного решения, реализацию, внедрение, сопровождение и&nbsp;поддержку.
             p.solutions__top-text.text Мы&nbsp;предлагаем набор планов и&nbsp;возможностей, инноваций и&nbsp;связанных с&nbsp;ними технологических решений, которые помогают компаниям и&nbsp;промышленным предприятиям перейти на&nbsp;новые уровни автоматизации и&nbsp;цифровизации.
-            p.solutions__top-text.text Наши Заказчики&nbsp;&mdash; основные предприятия реального сектора экономики: энергетики, нефтегазодобычи, промышленного производства. Наши продукты помогают им&nbsp;контролировать критическую инфраструктуру, обеспечивают аналитику для принятия управленческих решений, оптимизируют сложные технологические процессы.
+            p.solutions__top-text.text Наши Заказчики&nbsp;&mdash; основные предприятия реального сектора экономики: энергетики, нефтегазодобычи, промышленного производства. Наши продукты помогают им&nbsp;контролировать критическую инфраструктуру, обеспечивают аналитику для принятия управленческих решений,<br> оптимизируют сложные технологические процессы.
         h2.solutions__title.h2 Решения
         +solutions-grid()
