--- a/src/blocks/solutions/solutions.scss
+++ b/src/blocks/solutions/solutions.scss
@@ -12,10 +12,6 @@
     margin-top: 0px;
   }
 
-  @media (min-width: $screen-lg) {
-    margin-top: 22px;
-  }
-
   @media (min-width: $screen-md) {
     margin-top: 24px;
   }
@@ -26,22 +22,29 @@
 
   &__content {
     transform: translateY(6px);
+    padding-bottom: 20px;
 
 
     @media (min-width: $screen-xxl) {
       transform: translateY(80px);
     }
 
-    @media (min-width: $screen-lg) {
-      transform: translateY(60px);
+    @media (min-width: $screen-c) {
+      transform: translateY(73px);
+    }
+
+    @media (min-width: $screen-xl) {
+      transform: translateY(73px);
+      padding-bottom: 0;
     }
 
     @media (min-width: $screen-md) {
-      transform: translateY(24px);
+      transform: translateY(48px);
     }
 
     @media (min-width: $screen-sm) {
       transform: translateY(18px);
+      padding-bottom: 50px;
     }
   }
 
@@ -49,22 +52,42 @@
     @media (min-width: $screen-xxl) {
       margin-bottom: 72px;
     }
+    @media (min-width: $screen-c) {
+      margin-bottom: 66px;
+    }
+    @media (min-width: $screen-md) {
+      margin-bottom: 66px;
+    }
   }
 
   &__top-title {
+    font: 25px/1.2 $ff-i-b;
+    font-weight: 700;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
+
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 32px;
+      font-size: 36px;
+    }
+
+    @media (min-width: $screen-c) {
+      margin-bottom: 24px;
+      font-size: 26px;
+    }
 
     @media (min-width: $screen-lg) {
       margin-bottom: 24px;
     }
 
     @media (min-width: $screen-md) {
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
 
     @media (min-width: $screen-sm) {
       margin-bottom: 20px;
     }
+
   }
 
   &__top-descr {
@@ -81,6 +104,9 @@
     @media (min-width: $screen-lg) {
       margin-bottom: 24px;
     }
+    @media (min-width: $screen-md) {
+      margin-bottom: 26px;
+    }
 
     @media (min-width: $screen-sm) {
       margin-bottom: 18px;
@@ -91,8 +117,14 @@
     color: $white;
     margin: 0;
 
-    @media (min-width: $screen-lg) {
-      margin-bottom: 12px;
+    @media (min-width: $screen-xxl) {
+      margin-bottom: 32px;
+    }
+    @media (min-width: $screen-c) {
+      margin-bottom: 20px;
+    }
+    @media (min-width: $screen-md) {
+      margin-bottom: 16px;
     }
   }
 
