--- a/src/blocks/top-slider/top-slider.scss
+++ b/src/blocks/top-slider/top-slider.scss
@@ -9,33 +9,50 @@
 
   position: relative;
 
+  &__inner {
+
+    height: 100%;
+  }
+
 
   &__body {
-    max-width: 540px;
-    padding: 10% 0 19%;
+    max-width: calc(100% - 32px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: calc(100% - 30px);
 
     @media (min-width: $screen-xxl) {
       max-width: 960px;
-      padding: 154px 136px 272px;
+      padding-left: 136px;
+    }
+
+
+    @media (min-width: $screen-c) {
+      max-width: 1092px;
+      padding-left: 80px;
+      height: calc(100% - 120px);
     }
 
     @media (min-width: $screen-xl) {
-      max-width: 670px;
-      padding: 6% 0 17% 10%;
+      max-width: 773px;
+      padding-left: 100px;
+      height: calc(100% - 112px);
     }
 
     @media (min-width: $screen-lg) {
-      padding: 8% 0 17% 10%;
-      max-width: 540px;
+      max-width: 635px;
+      padding-left: 80px;
+      height: calc(100% - 76px);
     }
 
     @media (min-width: $screen-md) {
-      padding: 5% 0 11% 0%;
-      max-width: 547px;
+      max-width: 473px;
+      padding-left: 66px;
+      height: calc(100% - 76px);
     }
 
     @media (min-width: $screen-sm) {
-      padding: 5% 0 10%;
       max-width: 547px;
     }
   }
@@ -45,6 +62,24 @@
     background-color: $main-light;
     background-position: center center;
     background-size: cover;
+    height: 344px;
+
+
+    @media (min-width: $screen-xxl) {
+      height: 780px;
+    }
+
+    @media (min-width: $screen-c) {
+      height: 488px;
+    }
+
+    @media (min-width: $screen-lg) {
+      height: 488px;
+    }
+
+    @media (min-width: $screen-md) {
+      height: 377px;
+    }
 
   }
 
@@ -53,19 +88,29 @@
     font-weight: 600;
     color: $white;
     margin: 0 0 14px;
+    -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
+    display: flex;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    flex-direction: column;
+    overflow: hidden;
 
     @media (min-width: $screen-xxl) {
       font-size: 80px;
     }
 
-    @media (min-width: $screen-lg) {
-      font-size: 56px;
-      margin: 0 0 24px;
+    @media (min-width: $screen-c) {
+      margin: 0 0 16px;
     }
 
+    @media (min-width: $screen-lg) {}
+
     @media (min-width: $screen-md) {
-      margin: 0 0 30px;
+      margin: 0 0 16px;
+      font-size: 40px;
     }
+
     @media (min-width: $screen-sm) {
       margin: 0 0 24px;
     }
@@ -73,13 +118,24 @@
   }
 
   &__descr {
-    font: 18px/1.5 $ff-i-sb;
+    font: 16px/1.5 $ff-i-sb;
     font-weight: 600;
     color: $black;
     margin: 0;
+    letter-spacing: .02em;
 
     @media (min-width: $screen-xxl) {
       font-size: 24px;
+    }
+
+    p{
+      -webkit-line-clamp: 3;
+      text-overflow: ellipsis;
+      display: flex;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      flex-direction: column;
+      overflow: hidden;
     }
   }
 
@@ -94,8 +150,12 @@
     z-index: 5;
     padding: 0;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-xl) {
       bottom: 100px;
+    }
+
+    @media (min-width: $screen-md) {
+      bottom: 60px;
       width: 40px;
     }
 
@@ -107,8 +167,9 @@
       opacity: .5;
       transition: all $transition-time;
     }
-    &:hover{
-      svg path{
+
+    &:hover {
+      svg path {
         opacity: 1;
       }
     }
@@ -122,9 +183,12 @@
     right: 0%;
     padding: 0;
 
-    @media (min-width: $screen-lg) {
-      right: 0;
+    @media (min-width: $screen-xl) {
       bottom: 100px;
+    }
+
+    @media (min-width: $screen-md) {
+      bottom: 60px;
       width: 40px;
     }
 
@@ -136,8 +200,9 @@
       opacity: .5;
       transition: all $transition-time;
     }
-    &:hover{
-      svg path{
+
+    &:hover {
+      svg path {
         opacity: 1;
       }
     }
@@ -149,26 +214,36 @@
 
   &__pagination {
     display: flex;
-    justify-content: center;
-    bottom: 20px !important;
+    left: 37% !important;
+    bottom: 30px !important;
     width: var(--container-width) !important;
-    max-width: 960px;
+    max-width: 200px;
 
     @media (min-width: $screen-xxl) {
       bottom: 118px !important;
       left: 10% !important;
     }
 
+    @media (min-width: $screen-c) {
+      bottom: 112px !important;
+      left: 10% !important;
+      justify-content: flex-start;
+    }
+
     @media (min-width: $screen-xl) {
-      bottom: 100px !important;
-      left: 14% !important;
+      bottom: 112px !important;
       justify-content: flex-start;
     }
 
     @media (min-width: $screen-lg) {
-      bottom: 100px !important;
-      left: 17% !important;
+      left: 12% !important;
+    }
+
+    @media (min-width: $screen-md) {
+      bottom: 76px !important;
+      left: 11% !important;
       justify-content: flex-start;
+      max-width: 500px;
     }
 
     @media (min-width: $screen-sm) {
@@ -190,7 +265,7 @@
     opacity: 1;
     transition: all $transition-time;
 
-    &:hover{
+    &:hover {
       background-color: $white;
     }
   }
