--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -99,6 +99,7 @@ $screen-sm: 576px;
 $screen-md: 768px;
 $screen-lg: 992px;
 $screen-xl: 1200px;
+$screen-c: 1480px;
 $screen-xxl: 1800px;
 
 $container-sm: 100%;
